<resources>
    <string name="app_name">WhereAreYou</string>
    <string name="image_logo_empresa">Image Logo</string>
    <string name="android_developer">Android Developer</string>
    <string name="by_paulo_dantas">By: Paulo Dantas</string>
    <string name="logo_app">logo app</string>
    <string name="logo_texto">logo texto</string>
    <string name="texto_logo">Hello there, Welcome</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="welcome">Welcome</string>
    <string name="slogan">Sign up to start your new flash</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="already_have_an_account_login">ALREADY HAVE AN ACCOUNT? LOGIN</string>
</resources>
