<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_app"
        android:contentDescription="@string/logo_app" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_logo"
        android:textSize="40sp"
        app:fontFamily="@font/bungee"
        android:textColor="@color/colorPrimaryDark"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:background="@color/white"
            app:elevation="0dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorAccent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/go"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:background="@color/white"
            android:onClick="onClickRegister"
            app:elevation="0dp"
            android:text="@string/new_user_sign_up"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>