<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40sp"
        app:fontFamily="@font/bungee"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.00"
        app:layout_constraintStart_toStartOf="@+id/imageLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <TextView
        android:id="@+id/textSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textWelcome"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSlogan">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/textName"
        app:layout_constraintStart_toStartOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/textName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textEmail"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <Spinner
        android:id="@+id/spinnerDistrict"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerState"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spinnerState"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDistrict"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:hint="@string/confirm"
        app:layout_constraintEnd_toEndOf="@+id/textPassword"
        app:layout_constraintStart_toStartOf="@+id/textPassword"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGO"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go"
        app:layout_constraintEnd_toEndOf="@+id/textConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/textConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/textConfirmPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonHaveAccount"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCLickAccount"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_an_account_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonGO"
        app:layout_constraintStart_toStartOf="@+id/buttonGO"
        app:layout_constraintTop_toBottomOf="@+id/buttonGO" />


</androidx.constraintlayout.widget.ConstraintLayout>
